--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,7 +77,9 @@ export(scale_colour_multi)
 export(scale_fill_multi)
 export(scale_listed)
 export(scale_x_dendrogram)
+export(scale_x_panels)
 export(scale_y_dendrogram)
+export(scale_y_panels)
 export(stat_centroid)
 export(stat_difference)
 export(stat_funxy)
